Deployment server hook fix

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,21 @@
 *.ear
 *.DS_Store
 *.pyc
+
+lib-cov
+lcov.info
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+build
+.grunt
+
+node_modules
